force-app/main/default/objects/T_qtc_Active_Credit_Memo_Allocation__c/T_qtc_Active_Credit_Memo_Allocation__c.object-meta.xml
<CustomObject>
    <label>T_qtc_Active_Credit_Memo_Allocation</label>
    <nameField>
        <label>T_qtc_Active_Credit_Memo_Allocations</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T_qtc_Active_Credit_Memo_Allocations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>