force-app/main/default/objects/T_qtc_Active_Credit_Memo_Allocation__c/fields/Applied_To_Amt__c.field-meta.xml
<CustomField>
    <fullName>Applied_To_Amt__c</fullName>
    <label>Applied To Amt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>