force-app/main/default/objects/T_qtc_Active_Credit_Memo_Allocation__c/fields/Applied_to_link_Type__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_link_Type__c</fullName>
    <label>Applied to link Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>