force-app/main/default/objects/T_qtc_Active_Credit_Memo_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Applied_To_Internal_ID__c</columns>
    <columns>Applied_To_Link__c</columns>
    <columns>Applied_To_Doc_Number__c</columns>
    <columns>Internal_ID__c</columns>
    <columns>OSA_Contract_Number_from_Salesforce__c</columns>
    <columns>Document_Number__c</columns>
    <columns>Formula_Text__c</columns>
    <columns>Date__c</columns>
    <columns>Applied_To_Amt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>